Fixed sidebar on small screens

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body {
   padding: 7px;
   font-size: 1.1em;
   display: block;
+  white-space: normal;
 }
 
 #sidebarMenu ul ul a {
@@ -119,6 +120,9 @@ iframe {
     margin-left: 240px;
     padding-right: 0;
     width: 69%;
+  }
+  .col-lg-3 {
+    max-width: 260px;
   }
 }
 
